# beiwanglu

./: .env.example  .gitignore  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  README.md  index.html  kilo.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_drop_email_and_email_enabled.py  0003_refresh_tokens.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  response.py  security.py
backend/app/db/: session.py
backend/app/models/: folder.py  message.py  note.py  refresh_token.py  snapshot.py  user.py
backend/app/schemas/: auth.py  message.py  note.py  snapshot.py  user.py
backend/app/services/: auth_service.py  message_service.py  note_service.py  snapshot_service.py  upload_service.py  user_service.py
backend/scripts/: init_db.py
docs/: ai-skills.md  api-contract.md  architecture.md  data-model.md  design-system.md  development.md  feature-status.md  roadmap.md  tauri.md  testing.md  未完成与预留功能清单.md
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx  NotFoundView.tsx
src/features/auth/: AgreementModal.tsx  AuthInput.tsx  AuthModal.tsx  CodeLoginView.tsx  ForgotPasswordView.tsx  LoginView.tsx  RegisterView.tsx  authFormUtils.ts
src/shared/api/: config.ts  (+4 more)
src/styles/: global.css
(+126 files in other folders)
