[package]
name = "beiwanglu"
version = "0.1.0"
description = "Productive Serenity notes desktop app"
authors = ["beiwanglu"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
